update page titling

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -34,7 +34,7 @@
 
   <main>
 
-    <h1>Color Picker Using Slider Widgets</h1>
+    <h1>ARIA Example: Color Picker Using Slider Widgets</h1>
     <p>This example implements the slider design pattern
       that is often found in color pickers. Change the sliders to update the background color of box (note: the box is visually below the 3 slider controls), with the HEX and RGB values in form controls.</p>
 
