--- a/examples/slider/slider-2.html
+++ b/examples/slider/slider-2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Sliders Using ARIA-Valuetext | WAI-ARIA Authoring Practices 1.1</title>
+  <title>Vertical Slider and Sliders Using ARIA-Valuetext | WAI-ARIA Authoring Practices 1.1</title>
 
   <!--  Core js and css shared by all examples; do not modify when using this template. -->
   <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -22,8 +22,9 @@
 
   <main>
 
-    <h1>Thermostat Controls using ARIA Sliders</h1>
-      <p>This example implements the slider design pattern for a vertical slider and for sliders using <code>aria-value-text</code>.  Change vertical slider to set a value for temperature.  The fan speed and heat/air conditioning sliders use the <code>aria-value-text</code> property to communicate a text value, rather than a numerical value to assistive technologies.  </p>
+    <h1>ARIA Example: Vertical Sider and Sliders using <code>aria-valuetext</code></h1>
+
+      <p>This example implements the slider design pattern for a vertical slider and for sliders using <code>aria-value-text</code> in a hypothetical online thermostat example.  Change vertical slider to set a value for temperature.  The fan speed and heat/air conditioning sliders use the <code>aria-value-text</code> property to communicate a text value, rather than a numerical value to assistive technologies.  </p>
     <section>
         <div role="region" aria-label="Examples">
 
