--- a/examples/feed/feedDisplay.html
+++ b/examples/feed/feedDisplay.html
@@ -9,7 +9,7 @@
 <link href="../css/table.css" rel="stylesheet">
 
 <!--  js and css for this example. -->
-<link href="css/feed.css" rel="stylesheet">
+<link href="css/feedDisplay.css" rel="stylesheet">
 <script src="js/feed.js" type="text/javascript"></script>
 <script src="js/feedDisplay.js" type="text/javascript"></script>
 </head>
