Fixed JSCS bugs and added additional example links

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -38,6 +38,12 @@
     <p>This example implements the slider design pattern
       that is often found in color pickers. Change the sliders to update the background color of box (note: the box is visually below the 3 slider controls), with the HEX and RGB values in form controls.</p>
 
+  <p>Similar examples include: </p>
+  <ul>
+    <li><a href="slider-2.html">Vertical Slider and Sliders Using ARIA-Valuetext</a>: Demonstrates a veritcally aligned slider and sliders with text values.</li>
+    <!--  list other examples that implement the same design pattern. -->
+  </ul>
+
     <section>
        <h2 id="ex_label">Example</h2>
           <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>        
