--- a/examples/slider/slider-2.html
+++ b/examples/slider/slider-2.html
@@ -25,6 +25,13 @@
     <h1>ARIA Example: Vertical Sider and Sliders using <code>aria-valuetext</code></h1>
 
       <p>This example implements the slider design pattern for a vertical slider and for sliders using <code>aria-value-text</code> in a hypothetical online thermostat.  Change vertical slider to set a value for temperature.  The fan speed and heat/air conditioning sliders use the <code>aria-value-text</code> property to communicate a text value, rather than a numerical value to assistive technologies.  </p>
+
+  <p>Similar examples include: </p>
+  <ul>
+    <li><a href="slider-1.html">Color Picker Using Slider Widgets</a>: Demonstrates horizontally aligned sliders used for picking a color.</li>
+    <!--  list other examples that implement the same design pattern. -->
+  </ul>
+
     <section>
         <div role="region" aria-label="Examples">
 
