--- a/examples/feed/feedDisplay.html
+++ b/examples/feed/feedDisplay.html
@@ -7,21 +7,27 @@
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link href="../css/core.css" rel="stylesheet">
 <link href="../css/table.css" rel="stylesheet">
+<script src="../js/utils.js" type="text/javascript"></script>
 
 <!--  js and css for this example. -->
 <link href="css/feedDisplay.css" rel="stylesheet">
 <script src="js/feed.js" type="text/javascript"></script>
 <script src="js/feedDisplay.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
 </head>
 <body>
   <main>
     <h2>Recommended Restaurants</h2>
-    <section>
+    <section id="main-content">
       <div id="restaurant-feed" role="feed">
       </div>
     </section>
-    <section>
+    <section id="sidepanel">
       Sidepanel goes here
+      <select id="delay-time-select" name="delay_time">
+        <option value="200">200 ms</option>
+        <option value="400">400 ms</option>
+      </select>
     </section>
   </main>
 </body>
