Add Visual Indicators That Arrow Keys Work to Layout Grid Example
For issue #227, in the first layout grid example in examples/grid/LayoutGrids.html:
1. Change the focus ring in the grid to include indicators that directional navigation is available with the arrow keys.
2. Add a NUX in a labeled region after the grid. The NUX explains the meaning of the indicators.
3. The NUX is the first item in the tab sequence after the grid.
4. When users close the NUX, focus returns to the grid.

--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -60,6 +60,23 @@
             <span role="gridcell" class="list-link"><a tabindex="-1" href="https://www.w3.org/TR/2015/WD-SVG2-20150915/">SVG 2 Specification</a></span>
           </div>
         </div>
+        <div id="grid-nux" class="grid-nux" role="region" aria-label="Grid Instructions" tabindex="0">
+          <p>
+            Move keyboard focus inside a grid with arrow keys.
+          </p>
+          <p>
+            Arrow keys work any time you see this focus ring with the arrow
+            indicators.
+          </p>
+          <p>
+            When the arrow key focus ring appears, other keys, including Home,
+            End, Ctrl-Home, Ctrl-End, Page Up, and Page Down may also be
+            available to make keyboard navigation easier.
+          </p>
+          <a id="close-nux-button" class="close-nux-button" role="button" tabindex="0">
+            Close Tutorial
+          </a>
+        </div>
       </div>
       <div role="separator" id="ex1_end_sep" aria-labelledby="ex1_end_sep ex1_label" aria-label="End of"></div>
       <h4>Notes</h4>
