--- a/examples/slider/slider-2.html
+++ b/examples/slider/slider-2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>ARIA Example: Vertical Sider and Sliders using aria-valuetext</title>
+  <title>Vertical Slider and Sliders Using ARIA-Valuetext | WAI-ARIA Authoring Practices 1.1</title>
 
   <!--  Core js and css shared by all examples; do not modify when using this template. -->
   <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -11,216 +11,224 @@
   <script src="../js/highlight.pack.js"></script>
   <script src="../js/app.js"></script>
 
-  <link href="css/vertical-slider.css" rel="stylesheet">
-  <link href="css/text-slider.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/vertical-slider.css">
+  <link rel="stylesheet" href="css/text-slider.css">
+
+  <script src="js/vertical-slider.js" type="text/javascript"></script>
+  <script src="js/text-slider.js" type="text/javascript"></script>
+
 </head>
 <body>
-  <header>
-    <h1>ARIA Example: Vertical Sider and Sliders using <code>aria-valuetext</code></h1>
-  </header>
+
   <main>
-    <h1>Thermostat Controls using ARIA Sliders</h1>
-    <p>
-      This example needs revisions as described in
-      <a href="https://github.com/w3c/aria-practices/issues/230">issue 230.</a>
-    </p>
-    <p>Change sliders to set values for setting a vertical temperature, fan speed and heat/air conditioning.  The examples also use <code>aria-valuetext</code> property.</p>
 
-    <div role="region" aria-label="Examples">
+    <h1>ARIA Example: Vertical Sider and Sliders using <code>aria-valuetext</code></h1>
 
-      <h2>Vertical Slider Example</h2>
+      <p>This example implements the slider design pattern for a vertical slider and for sliders using <code>aria-value-text</code> in a hypothetical online thermostat.  Change vertical slider to set a value for temperature.  The fan speed and heat/air conditioning sliders use the <code>aria-value-text</code> property to communicate a text value, rather than a numerical value to assistive technologies.  </p>
 
-      <div id="example1" class="example">
-        <div class="aria-widget-vertical-slider" >
-            <div id="idTemp" class="label">Temperature</div>
-            <div id="idTempValue" class="value">0</div>
-            <div class="rail" style="height: 200px">
-              <div id="idTempThumb"
-                   role="slider"
-                   class="thumb"
-                   aria-valuemin="50"
-                   aria-valuenow="68"
-                   aria-valuemax="100"
-                   aria-labelledby="idTemp"></div>
+  <p>Similar examples include: </p>
+  <ul>
+    <li><a href="slider-1.html">Color Picker Using Slider Widgets</a>: Demonstrates horizontally aligned sliders used for picking a color.</li>
+    <!--  list other examples that implement the same design pattern. -->
+  </ul>
+
+    <section>
+        <div role="region" aria-label="Examples">
+
+          <h2>Vertical Slider Example</h2>
+
+          <div id="ex1" class="example">
+            <div class="aria-widget-vertical-slider" >
+                <div id="idTemp" class="label">Temperature</div>
+                <div id="idTempValue" class="value">0</div>
+                <div class="rail" style="height: 200px">
+                  <div id="idTempThumb"
+                       role="slider"
+                       class="thumb"
+                       aria-valuemin="50"
+                       aria-valuenow="68"
+                       aria-valuemax="100"
+                       aria-labelledby="idTemp"></div>
+                </div>
             </div>
-        </div>
-      </div>
-
-      <h2>Slider Examples using using <code>aria-valuetext</code></h2>
-
-      <div id="example2" class="example">
-
-        <div class="aria-widget-text-slider" >
-          <div id="idFan" class="label">Fan</div>
-          <div class="rail" style="width: 160px">
-            <div id="idFanThumb"
-                 role="slider"
-                 class="thumb"
-                 aria-valuemin="0"
-                 aria-valuenow="0"
-                 aria-valuemax="3"
-                 aria-valuetext="Off"
-                 aria-labelledby="idFan"
-                 aria-orientation="horizontal"></div>
-            <div class="value">Off</div>
-            <div class="value">Low</div>
-            <div class="value">High</div>
-            <div class="value">Auto</div>
           </div>
-        </div>
 
-        <div class="aria-widget-text-slider" >
-          <div id="idHeat" class="label">Heat/Cool</div>
-          <div class="rail" style="width: 120px">
-            <div id="idHeatThumb"
-                 role="slider"
-                 class="thumb"
-                 aria-valuemin="0"
-                 aria-valuenow="0"
-                 aria-valuemax="2"
-                 aria-valuetext="Off"
-                 aria-labelledby="idHeat"
-                 aria-orientation="horizontal"></div>
-            <div class="value">Off</div>
-            <div class="value">Heat</div>
-            <div class="value">Cool</div>
+          <h2>Slider Examples using using <code>aria-valuetext</code></h2>
+
+          <div id="ex2" class="example">
+
+            <div class="aria-widget-text-slider" >
+              <div id="idFan" class="label">Fan</div>
+              <div class="rail" style="width: 160px">
+                <div id="idFanThumb"
+                     role="slider"
+                     class="thumb"
+                     aria-valuemin="0"
+                     aria-valuenow="0"
+                     aria-valuemax="3"
+                     aria-valuetext="Off"
+                     aria-labelledby="idFan"
+                     aria-orientation="horizontal"></div>
+                <div class="value">Off</div>
+                <div class="value">Low</div>
+                <div class="value">High</div>
+                <div class="value">Auto</div>
+              </div>
+            </div>
+
+            <div class="aria-widget-text-slider" >
+              <div id="idHeat" class="label">Heat/Cool</div>
+              <div class="rail" style="width: 120px">
+                <div id="idHeatThumb"
+                     role="slider"
+                     class="thumb"
+                     aria-valuemin="0"
+                     aria-valuenow="0"
+                     aria-valuemax="2"
+                     aria-valuetext="Off"
+                     aria-labelledby="idHeat"
+                     aria-orientation="horizontal"></div>
+                <div class="value">Off</div>
+                <div class="value">Heat</div>
+                <div class="value">Cool</div>
+              </div>
+            </div>
+
           </div>
+
         </div>
+    </section>
 
-      </div>
+    <section> 
+        <h2 id="kbd_label" style="clear: both;">Keyboard Support</h2>
 
-    </div>
+        <table aria-labelledby="kbd_label" class="def">
+          <thead>
+            <tr>
+              <th>Key</th>
+              <th>Function</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th><kbd>Right Arrow,<br/> Up Arrow</kbd></th>
+              <td>Increase slide value by increment value</td>
+            </tr>
+            <tr>
+              <th><kbd>Left Arrow,<br/> Down Arrow</kbd></th>
+              <td>Decrease slide value by increment value</td>
+            </tr>
+            <tr>
+              <th><kbd>Page Up Arrow</kbd></th>
+              <td>Increase slide value by jump value <br/> (temperature slider only)</td>
+            </tr>
+            <tr>
+              <th><kbd>Page Down Arrow</kbd></th>
+              <td>Decrease slide value by jump value <br/> (temperature slider only)</td>
+            </tr>
+            <tr>
+              <th><kbd>Home</kbd></th>
+              <td>Set slider to minimum value</td>
+            </tr>
+            <tr>
+              <th><kbd>End</kbd></th>
+              <td>Set slider to maximum value</td>
+            </tr>
+          </tbody>
+        </table>
 
+        <h2 id="rps_label">ARIA Roles, Properties and States</h2>
 
-    <h2 id="id_kbd" style="clear: both;">Keyboard Support</h2>
+        <table aria-labelledby="rps_label"  class="data attributes">
+          <thead>
+            <tr>
+              <th scope="col">Role</th>
+              <th scope="col">Attribute</th>
+              <th scope="col">Element</th>
+              <th scope="col">Usage</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">slider</th>
+              <td></td>
+              <td><code>div</code></td>
+              <td>Identify the widget as a slider</td>
+            </tr>
+            <tr>
+              <td></td>
+              <th scope="row"><code>aria-orientation</code></th>
+              <td><code>div</code></td>
+              <td>Indicates the orientation of the slider is "vertical" for the temperature slider or "horizontal" for the fan and temperature controls</td>
+            </tr>
+            <tr>
+              <td></td>
+              <th scope="row"><code>aria-valuemax</code></th>
+              <td><code>div</code></td>
+              <td>Maximum value of the slider</td>
+            </tr>
+            <tr>
+              <td></td>
+              <th scope="row"><code>aria-valuemin</code></th>
+              <td><code>div</code></td>
+              <td>Minimum value of the slider</td>
+            </tr>
+            <tr>
+              <td></td>
+              <th scope="row"><code>aria-valuenow</code></th>
+              <td><code>div</code></td>
+              <td>Current value of the slider</td>
+            </tr>
+            <tr>
+              <td></td>
+              <th scope="row"><code>aria-valuetext</code></th>
+              <td><code>div</code></td>
+              <td>The value of the temperature slider appended with the text "degrees" or one of the text values</td>
+            </tr>
+            <tr>
+              <td></td>
+              <th scope="row"><code>aria-labelledby</code></th>
+              <td><code>div</code></td>
+              <td>Reference to define a unique descriptive <em>accessible name</em> for each slider widget</td>
+            </tr>
+          </tbody>
+        </table>
 
-    <table aria-labelledby="id_kbd" class="def">
-      <thead>
-        <tr>
-          <th>Key</th>
-          <th>Function</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Right and Up Arrow</td>
-          <td>Increase slide value by increment value</td>
-        </tr>
-        <tr>
-          <td>Left and Down Arrow</td>
-          <td>Decrease slide value by increment value</td>
-        </tr>
-        <tr>
-          <td>Page Up Arrow <br/>(temperature slider only)</td>
-          <td>Increase slide value by jump value</td>
-        </tr>
-        <tr>
-          <td>Page Down Arrow <br/>(temperature slider only)</td>
-          <td>Decrease slide value by jump value</td>
-        </tr>
-        <tr>
-          <td>Home</td>
-          <td>Set slider to minimum value</td>
-        </tr>
-        <tr>
-          <td>End</td>
-          <td>Set slider to maximum value</td>
-        </tr>
-      </tbody>
-    </table>
+    </section>
 
-    <h2 id="id_rps">ARIA Roles, Properties and States</h2>
+    <section>
+        <h2>Javascript and CSS Source Code</h2>
 
-    <table aria-labelledby="id_rps" class="data attributes">
-      <thead>
-        <tr>
-          <th>Role</th>
-          <th>Property/State</th>
-          <th>Component</th>
-          <th>Usage</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>slider</td>
-          <td></td>
-          <td>thumb</td>
-          <td>Identify the widget as a slider</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>aria-orientation</td>
-          <td>thumb</td>
-          <td>Indicates the orientation of the slider is "vertical" for the temperature slider or "horizontal" for the fan and temperature controls</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>aria-valuemax</td>
-          <td>thumb</td>
-          <td>Maximum value of the slider</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>aria-valuemin</td>
-          <td>thumb</td>
-          <td>Minimum value of the slider</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>aria-valuenow</td>
-          <td>thumb</td>
-          <td>Current value of the slider</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>aria-valuetext</td>
-          <td>thumb</td>
-          <td>The value of the temperature slider appended with the text "degrees" or one of the text values</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>aria-labelledby</td>
-          <td>thumb</td>
-          <td>Reference to define a unique descriptive <em>accessible name</em> for each slider widget</td>
-        </tr>
-      </tbody>
-    </table>
+        <ul>
+          <li>CSS: <a href="css/text-slider.css" type="tex/css">text-slider.css</a></li>
+          <li>CSS: <a href="css/vertical-slider.css" type="tex/css">vertical-slider.css</a></li>
+          <li>Javascript: <a href="js/text-slider.js" type="text/javascript">text-slider.js</a></li>
+          <li>Javascript: <a href="js/vertical-slider.js" type="text/javascript">vertical-slider.js</a></li>
+        </ul>
+    </section>
 
-
-    <script src="../js/examples.js" type="text/javascript"></script>
-
-    <h2>Source Code</h2>
-
-    <h3>Temperature Slider</h3>
-
-    <ul>
-      <li>CSS: <a href="css/vertical-slider.css" type="tex/css">vertical-slider.css</a></li>
-      <li>Javascript: <a href="js/vertical-slider.js" type="text/javascript">vertical-slider.js</a></li>
-    </ul>
-
-    <pre><code id="sc1"></code></pre>
-
-    <h3>Fan/Heat Sliders</h3>
-
-    <ul>
-      <li>CSS: <a href="css/text-slider.css" type="tex/css">text-slider.css</a></li>
-      <li>Javascript: <a href="js/text-slider.js" type="text/javascript">text-slider.js</a></li>
-    </ul>
-
-    <pre><code id="sc2"></code></pre>
-
-    <script>
-      console.log(sourceCode)
-      sourceCode.add('sc1', 'example1');
-      sourceCode.add('sc2', 'example2');
-      sourceCode.make()
-
-    </script>
-
+    <section>
+        <h2 id="sc1_label">HTML Source Code</h2>
+        <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
+        <pre><code id="sc1"></code></pre>
+        <pre><code id="sc2"></code></pre>
+        <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
+        <!--
+          The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
+          It renders the HTML in the preceding div with ID 'sc1'.
+          If you change the ID of either the 'ex1' div or the 'sc1' div, be sure to update the sourceCode.add function parameters.
+          -->
+        <script>
+          sourceCode.add('sc1', 'ex1');
+          sourceCode.add('sc2', 'ex2');
+          sourceCode.make();
+        </script>
+    </section>
 
 
   </main>
-  <script src="js/vertical-slider.js" type="text/javascript"></script>
-  <script src="js/text-slider.js" type="text/javascript"></script>
+  <nav>
+    <a href="../../../#slider">Slider Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+  </nav>
 </body>
 </html>
