Rename accordion example file

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>This page has a link to all current APG example pages. Internal use only (it’s probably already out of date).</h1>
   <ol>
-    <li><a href="accordion/accordion1.html">Accordion</a></li>
+    <li><a href="accordion/accordion.html">Accordion</a></li>
     <li><a href="alert/index.html">Alert</a></li>
     <li><a href="breadcrumb/index.html">Breadcrumb</a></li>
     <li><a href="button/button.html">Button</a></li>
