New design for radio button examples

--- a/examples/radio/radio-2/radio-2.html
+++ b/examples/radio/radio-2/radio-2.html
@@ -11,8 +11,7 @@
     <script src="../../js/highlight.pack.js"></script>
     <script src="../../js/app.js"></script>
 
-    <link href="css/radioActiveDescendant.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="../css/radio.css">
     <script src="js/radioGroupActiveDescendant.js" type="text/javascript"></script>
     <script src="js/radioButtonActiveDescendant.js" type="text/javascript"></script>
 
@@ -265,7 +264,7 @@
 
         <h2>Javascript and CSS Source Code</h2>
         <ul>
-            <li>CSS: <a href="css/radioActiveDescendant.css" type="tex/css">radioActiveDescendant.css</a></li>
+            <li>CSS: <a href="../css/radio.css" type="tex/css">radio.css</a></li>
             <li>Javascript: <a href="js/radioGroupActiveDescendant.js" type="text/javascript">radioGroupActiveDescendant.js</a></li>
             <li>Javascript: <a href="js/radioButtonActiveDescendant.js" type="text/javascript">radioButtonActiveDescendant.js</a></li>
         </ul>
