--- a/examples/slider/slider-2.html
+++ b/examples/slider/slider-2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Vertical Slider and Sliders Using ARIA-Valuetext | WAI-ARIA Authoring Practices 1.1</title>
+  <title>Slider Examples with aria-orientation and aria-valuetext | WAI-ARIA Authoring Practices 1.1</title>
 
   <!--  Core js and css shared by all examples; do not modify when using this template. -->
   <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -13,222 +13,274 @@
 
   <link rel="stylesheet" href="css/vertical-slider.css">
   <link rel="stylesheet" href="css/text-slider.css">
-
   <script src="js/vertical-slider.js" type="text/javascript"></script>
   <script src="js/text-slider.js" type="text/javascript"></script>
-
 </head>
 <body>
-
   <main>
-
-    <h1>ARIA Example: Vertical Sider and Sliders using <code>aria-valuetext</code></h1>
-
-      <p>This example implements the slider design pattern for a vertical slider and for sliders using <code>aria-value-text</code> in a hypothetical online thermostat.  Change vertical slider to set a value for temperature.  The fan speed and heat/air conditioning sliders use the <code>aria-value-text</code> property to communicate a text value, rather than a numerical value to assistive technologies.  </p>
-
-  <p>Similar examples include: </p>
-  <ul>
-    <li><a href="slider-1.html">Color Picker Using Slider Widgets</a>: Demonstrates horizontally aligned sliders used for picking a color.</li>
-    <!--  list other examples that implement the same design pattern. -->
-  </ul>
-
+    <h1>Slider Examples with aria-orientation and aria-valuetext</h1>
+    <p>
+      <strong>NOTE:</strong> Major revisions have been made to this page.
+      Please provide feedback in 
+      <a href="https://github.com/w3c/aria-practices/issues/230">issue 230.</a>
+    </p>
+    <p>
+      The following example of a hypothetical online thermostat demonstrates the 
+      <a href="../../#slider">slider design pattern.</a>
+      The desired temperature is set with the first slider, which is vertically oriented.
+      Two horizontal sliders set fan speed and mode.
+      The horizontal sliders illustrate how to use <code>aria-valuetext</code> to provide assistive technologies with meaningful names for numeric values.
+    </p>
+    <p>Similar examples include: </p>
+    <ul>
+      <li><a href="slider-1.html">Horizontal Slider Examples</a>: Demonstrates using three horizontally aligned sliders to make a color picker.</li>
+    </ul>
+    
     <section>
-        <div role="region" aria-label="Examples">
-
-          <h2>Vertical Slider Example</h2>
-
-          <div id="ex1" class="example">
-            <div class="aria-widget-vertical-slider" >
-                <div id="idTemp" class="label">Temperature</div>
-                <div id="idTempValue" class="value">0</div>
-                <div class="rail" style="height: 200px">
-                  <div id="idTempThumb"
-                       role="slider"
-                       class="thumb"
-                       aria-valuemin="50"
-                       aria-valuenow="68"
-                       aria-valuemax="100"
-                       aria-labelledby="idTemp"></div>
-                </div>
-            </div>
+      <h2 id="ex_label">Example</h2>
+      <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
+      <div id="ex1" class="example">
+        <div class="aria-widget-vertical-slider">
+          <div id="idTemp" class="label">Temperature</div>
+          <div id="idTempValue" class="value">0</div>
+          <div class="rail" style="height: 200px">
+            <div id="idTempThumb" role="slider" class="thumb" aria-valuemin="50" aria-valuenow="68"
+              aria-valuemax="100" aria-labelledby="idTemp"
+            ></div>
           </div>
-
-          <h2>Slider Examples using using <code>aria-valuetext</code></h2>
-
-          <div id="ex2" class="example">
-
-            <div class="aria-widget-text-slider" >
-              <div id="idFan" class="label">Fan</div>
-              <div class="rail" style="width: 160px">
-                <div id="idFanThumb"
-                     role="slider"
-                     class="thumb"
-                     aria-valuemin="0"
-                     aria-valuenow="0"
-                     aria-valuemax="3"
-                     aria-valuetext="Off"
-                     aria-labelledby="idFan"
-                     aria-orientation="horizontal"></div>
-                <div class="value">Off</div>
-                <div class="value">Low</div>
-                <div class="value">High</div>
-                <div class="value">Auto</div>
-              </div>
-            </div>
-
-            <div class="aria-widget-text-slider" >
-              <div id="idHeat" class="label">Heat/Cool</div>
-              <div class="rail" style="width: 120px">
-                <div id="idHeatThumb"
-                     role="slider"
-                     class="thumb"
-                     aria-valuemin="0"
-                     aria-valuenow="0"
-                     aria-valuemax="2"
-                     aria-valuetext="Off"
-                     aria-labelledby="idHeat"
-                     aria-orientation="horizontal"></div>
-                <div class="value">Off</div>
-                <div class="value">Heat</div>
-                <div class="value">Cool</div>
-              </div>
-            </div>
-
-          </div>
-
         </div>
-    </section>
-
-    <section> 
-        <h2 id="kbd_label" style="clear: both;">Keyboard Support</h2>
-
-        <table aria-labelledby="kbd_label" class="def">
-          <thead>
-            <tr>
-              <th>Key</th>
-              <th>Function</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th><kbd>Right Arrow,<br/> Up Arrow</kbd></th>
-              <td>Increase slide value by increment value</td>
-            </tr>
-            <tr>
-              <th><kbd>Left Arrow,<br/> Down Arrow</kbd></th>
-              <td>Decrease slide value by increment value</td>
-            </tr>
-            <tr>
-              <th><kbd>Page Up Arrow</kbd></th>
-              <td>Increase slide value by jump value <br/> (temperature slider only)</td>
-            </tr>
-            <tr>
-              <th><kbd>Page Down Arrow</kbd></th>
-              <td>Decrease slide value by jump value <br/> (temperature slider only)</td>
-            </tr>
-            <tr>
-              <th><kbd>Home</kbd></th>
-              <td>Set slider to minimum value</td>
-            </tr>
-            <tr>
-              <th><kbd>End</kbd></th>
-              <td>Set slider to maximum value</td>
-            </tr>
-          </tbody>
-        </table>
-
-        <h2 id="rps_label">ARIA Roles, Properties and States</h2>
-
-        <table aria-labelledby="rps_label"  class="data attributes">
-          <thead>
-            <tr>
-              <th scope="col">Role</th>
-              <th scope="col">Attribute</th>
-              <th scope="col">Element</th>
-              <th scope="col">Usage</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">slider</th>
-              <td></td>
-              <td><code>div</code></td>
-              <td>Identify the widget as a slider</td>
-            </tr>
-            <tr>
-              <td></td>
-              <th scope="row"><code>aria-orientation</code></th>
-              <td><code>div</code></td>
-              <td>Indicates the orientation of the slider is "vertical" for the temperature slider or "horizontal" for the fan and temperature controls</td>
-            </tr>
-            <tr>
-              <td></td>
-              <th scope="row"><code>aria-valuemax</code></th>
-              <td><code>div</code></td>
-              <td>Maximum value of the slider</td>
-            </tr>
-            <tr>
-              <td></td>
-              <th scope="row"><code>aria-valuemin</code></th>
-              <td><code>div</code></td>
-              <td>Minimum value of the slider</td>
-            </tr>
-            <tr>
-              <td></td>
-              <th scope="row"><code>aria-valuenow</code></th>
-              <td><code>div</code></td>
-              <td>Current value of the slider</td>
-            </tr>
-            <tr>
-              <td></td>
-              <th scope="row"><code>aria-valuetext</code></th>
-              <td><code>div</code></td>
-              <td>The value of the temperature slider appended with the text "degrees" or one of the text values</td>
-            </tr>
-            <tr>
-              <td></td>
-              <th scope="row"><code>aria-labelledby</code></th>
-              <td><code>div</code></td>
-              <td>Reference to define a unique descriptive <em>accessible name</em> for each slider widget</td>
-            </tr>
-          </tbody>
-        </table>
-
+        <div class="aria-widget-text-slider">
+          <div id="idFan" class="label">Fan</div>
+          <div class="rail" style="width: 160px">
+            <div id="idFanThumb" role="slider" class="thumb" aria-valuemin="0" aria-valuenow="0"
+              aria-valuemax="3" aria-valuetext="Off" aria-labelledby="idFan"
+              aria-orientation="horizontal"
+            ></div>
+            <div class="value">Off</div>
+            <div class="value">Low</div>
+            <div class="value">High</div>
+            <div class="value">Auto</div>
+          </div>
+        </div>
+        <div class="aria-widget-text-slider">
+          <div id="idHeat" class="label">Heat/Cool</div>
+          <div class="rail" style="width: 120px">
+            <div id="idHeatThumb" role="slider" class="thumb" aria-valuemin="0" aria-valuenow="0"
+              aria-valuemax="2" aria-valuetext="Off" aria-labelledby="idHeat"
+              aria-orientation="horizontal"
+            ></div>
+            <div class="value">Off</div>
+            <div class="value">Heat</div>
+            <div class="value">Cool</div>
+          </div>
+        </div>
+      </div>
+      <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
     </section>
 
     <section>
-        <h2>Javascript and CSS Source Code</h2>
+      <h2 id="kbd_label" style="clear: both;">Keyboard Support</h2>
+      <table aria-labelledby="kbd_label" class="def">
+        <thead>
+          <tr>
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>
+              <kbd>Right Arrow</kbd>
+            </th>
+            <td>Increases slider value one step.</td>
+          </tr>
+          <tr>
+            <th>
+              <kbd>Up Arrow</kbd>
+            </th>
+            <td>Increases slider value one step.</td>
+          </tr>
+          <tr>
+            <th>
+              <kbd>Left Arrow</kbd>
+            </th>
+            <td>Decreases slider value one step.</td>
+          </tr>
+          <tr>
+            <th>
+              <kbd>Down Arrow</kbd>
+            </th>
+            <td>Decreases slider value one step.</td>
+          </tr>
+          <tr>
+            <th>
+              <kbd>Page Up</kbd>
+            </th>
+            <td>Increases temperature slider value multiple steps. In this slider, jumps ten steps.</td>
+          </tr>
+          <tr>
+            <th>
+              <kbd>Page Down</kbd>
+            </th>
+            <td>Decreases temperature slider value multiple steps. In this slider, jumps ten steps.</td>
+          </tr>
+          <tr>
+            <th>
+              <kbd>Home</kbd>
+            </th>
+            <td>Sets slider to its minimum value.</td>
+          </tr>
+          <tr>
+            <th>
+              <kbd>End</kbd>
+            </th>
+            <td>Sets slider to its maximum value.</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
 
-        <ul>
-          <li>CSS: <a href="css/text-slider.css" type="tex/css">text-slider.css</a></li>
-          <li>CSS: <a href="css/vertical-slider.css" type="tex/css">vertical-slider.css</a></li>
-          <li>Javascript: <a href="js/text-slider.js" type="text/javascript">text-slider.js</a></li>
-          <li>Javascript: <a href="js/vertical-slider.js" type="text/javascript">vertical-slider.js</a></li>
-        </ul>
+  <section>
+      <h2 id="rps_label">Role, Property, State, and Tabindex Attributes</h2>
+      <table aria-labelledby="rps_label" class="data attributes">
+        <thead>
+          <tr>
+            <th scope="col">Role</th>
+            <th scope="col">Attribute</th>
+            <th scope="col">Element</th>
+            <th scope="col">Usage</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">
+              <code>slider</code>
+            </th>
+            <td></td>
+            <td>
+              <code>div</code>
+            </td>
+            <td>
+              <ul>
+                <li>Identifies the element as a slider.</li>
+                <li>Set on the <code>div</code> that represents as the movable thumb because it is the operable element that represents the slider value.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <th scope="row">
+              <code>tabindex=<q>0</q></code>
+            </th>
+            <td>
+              <code>div</code>
+            </td>
+            <td>
+              <ul>
+                <li>Includes the slider thumb in the page tab sequence.</li>
+                <li>Added by the JavaScript during instantiation.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <th scope="row">
+              <code>aria-orientation</code>
+            </th>
+            <td>
+              <code>div</code>
+            </td>
+            <td>
+              <ul>
+                <li>Indicates the orientation of the slider element.</li>
+                <li>Set to <code>vertical</code> for the temperature slider.</li>
+                <li>Set to <code>horizontal</code> for the fan and heat/cool controls.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <th scope="row">
+              <code>aria-valuemax=<q>NUMBER</q></code>
+            </th>
+            <td>
+              <code>div</code>
+            </td>
+            <td>Specifies a numeric value that is the maximum value the slider can have.</td>
+          </tr>
+          <tr>
+            <td></td>
+            <th scope="row">
+              <code>aria-valuemin=<q>NUMBER</q></code>
+            </th>
+            <td>
+              <code>div</code>
+            </td>
+            <td>Specifies a numeric value that is the minimum value the slider can have.</td>
+          </tr>
+          <tr>
+            <td></td>
+            <th scope="row">
+              <code>aria-valuenow=<q>NUMBER</q></code>
+            </th>
+            <td>
+              <code>div</code>
+            </td>
+            <td>A numeric value that is the current value of the slider.</td>
+          </tr>
+          <tr>
+            <td></td>
+            <th scope="row">
+              <code>aria-valuetext=<q>STRING</q></code>
+            </th>
+            <td>
+              <code>div</code>
+            </td>
+            <td>
+              <ul>
+                <li>A string value that provides a user-friendly name for the current value of the slider.</li>
+                <li>For the temperature slider, is the value of the slider appended with the text <q> degrees</q>.</li>
+                <li>For fan and heat/cool, is the text representation of the current state, e.g., <q>Off</q> or <q>Heat</q>.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <th scope="row">
+              <code>aria-labelledby=<q>IDREF</q></code>
+            </th>
+            <td>
+              <code>div</code>
+            </td>
+            <td>Refers to the element containing the name of the slider.</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
 
     <section>
-        <h2 id="sc1_label">HTML Source Code</h2>
-        <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-        <pre><code id="sc1"></code></pre>
-        <pre><code id="sc2"></code></pre>
-        <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
-        <!--
-          The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
-          It renders the HTML in the preceding div with ID 'sc1'.
-          If you change the ID of either the 'ex1' div or the 'sc1' div, be sure to update the sourceCode.add function parameters.
-          -->
-        <script>
-          sourceCode.add('sc1', 'ex1');
-          sourceCode.add('sc2', 'ex2');
-          sourceCode.make();
-        </script>
+      <h2>Javascript and CSS Source Code</h2>
+      <ul>
+        <li>CSS: <a href="css/text-slider.css" type="tex/css">text-slider.css</a></li>
+        <li>CSS: <a href="css/vertical-slider.css" type="tex/css">vertical-slider.css</a></li>
+        <li>Javascript: <a href="js/text-slider.js" type="text/javascript">text-slider.js</a></li>
+        <li>Javascript: <a href="js/vertical-slider.js" type="text/javascript">vertical-slider.js</a></li>
+      </ul>
     </section>
 
-
+    <section>
+      <h2 id="sc1_label">HTML Source Code</h2>
+      <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
+      <pre><code id="sc1"></code></pre>
+      <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
+      <script>
+        sourceCode.add('sc1', 'ex1');
+        sourceCode.make();
+      </script>
+    </section>
   </main>
   <nav>
-    <a href="../../../#slider">Slider Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+    <a href="../../#slider">Slider Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 </body>
 </html>
