Horizontal Slider Example: Update Similar Example Link
For issue #229, modified examples/slider/slider-1.html:
changed the name and description of the link to the thermostat slider example.
The name of that example was changed when working on issue 230.

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -29,10 +29,13 @@
       Change the background color of the box below the picker by adjusting the sliders for red, green, and blue values.
       The HEX and RGB values of the chosen color are displayed by the color box.
     </p>
-  <p>Similar examples include: </p>
-  <ul>
-    <li><a href="slider-2.html">Vertical Slider Examples Using aria-valuetext</a>: Vertical sliders that demonstrate using aria-valuetext to translate numeric values into user-friendly strings. </li>
-  </ul>
+    <p>Similar examples include: </p>
+    <ul>
+      <li>
+        <a href="slider-2.html">Slider Examples with aria-orientation and aria-valuetext</a>: 
+        Three thermostat control sliders that demonstrate using aria-orientation and aria-valuetext.
+      </li>
+    </ul>
     <section>
        <h2 id="ex_label">Example</h2>
           <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>        
