Slider Pattern: Minor Editorial Revisions
Modified slider design pattern section in aria-practices.html:
1. Changed keyboard list to put one key per list item per editorial guidelines.
2. Made example link names and descriptions consistent with the updated example pages.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1572,8 +1572,10 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
         <ul>
-          <li><kbd>Right Arrow</kbd> and <kbd>Up Arrow</kbd>: Increase the value of the slider.</li>
-          <li><kbd>Left Arrow</kbd> and <kbd>Down Arrow</kbd>: Decrease the value of the slider.</li>
+          <li><kbd>Right Arrow</kbd>: Increase the value of the slider by one step.</li>
+          <li><kbd>Up Arrow</kbd>: Increase the value of the slider by one step.</li>
+          <li><kbd>Left Arrow</kbd>: Decrease the value of the slider by one step.</li>
+          <li><kbd>Down Arrow</kbd>: Decrease the value of the slider by one step.</li>
           <li><kbd>Home</kbd>: Set the slider to the first allowed value in its range.</li>
           <li><kbd>End</kbd>: Set the slider to the last allowed value in its range.</li>
           <li><kbd>Page Up</kbd> (Optional): Increment the slider by an amount larger than the step change made by <kbd>Up Arrow</kbd>.</li>
@@ -1611,8 +1613,8 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
       <section class="notoc">
         <h4>Examples</h4>
         <ul>
-          <li><a href="examples/slider/slider-1.html">Horizontal Slider Examples (e.g. color picker)</a></li>
-          <li><a href="examples/slider/slider-2.html">Vertical and Text Slider Examples (e.g. Thermostat Controls)</a></li>
+          <li><a href="examples/slider/slider-1.html">Horizontal Slider Examples</a>: Demonstrates using three horizontally aligned sliders to make a color picker.</li>
+          <li><a href="examples/slider/slider-2.html">Slider Examples with aria-orientation and aria-valuetext</a>: Three thermostat control sliders that demonstrate using aria-orientation and aria-valuetext.</li>
         </ul>
       </section>
     </section>
