--- a/examples/slider/slider-2.html
+++ b/examples/slider/slider-2.html
@@ -45,6 +45,7 @@
                   <div id="idTempThumb"
                        role="slider"
                        class="thumb"
+                       tabindex="0"
                        aria-valuemin="50"
                        aria-valuenow="68"
                        aria-valuemax="100"
@@ -63,6 +64,7 @@
                 <div id="idFanThumb"
                      role="slider"
                      class="thumb"
+                      tabindex="0"
                      aria-valuemin="0"
                      aria-valuenow="0"
                      aria-valuemax="3"
@@ -82,6 +84,7 @@
                 <div id="idHeatThumb"
                      role="slider"
                      class="thumb"
+                     tabindex="0"
                      aria-valuemin="0"
                      aria-valuenow="0"
                      aria-valuemax="2"
