fixed problem with HTML in javascript blocks

--- a/examples/coding-template/Example-Template.html
+++ b/examples/coding-template/Example-Template.html
@@ -69,11 +69,12 @@
         <!--  Target of previous link will need to be updated when we move the guidelines into the wiki from Ian's repo.  -->
 
         <script type="text/javascript">
-          <--  Javascript relavant to example -->
+          <!--  Javascript relavant to example -->
           var i;
           var str = "text"
           for(i = 0; i < str.length; i++) {
             console.log(str[i]);
+            var code = "<p>Hello World!</p>";
           }
         </script>
       </ul>
