Updated slider to include tab index in source code and improve focus styling of rail

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -46,6 +46,7 @@
                 <div class="rail" style="width: 300px;">
                   <div id="idRedValue"
                        role="slider"
+                       tabindex="0"
                        class="thumb"
                        aria-valuemin="0"
                        aria-valuenow="0"
@@ -60,6 +61,7 @@
                 <div class="rail" style="width: 300px">
                   <div id="idGreenValue"
                        role="slider"
+                       tabindex="0"
                        class="thumb"
                        aria-valuemin="0"
                        aria-valuenow="0"
@@ -74,6 +76,7 @@
                 <div class="rail" style="width: 300px">
                   <div id="idBlueValue"
                        role="slider"
+                       tabindex="0"
                        class="thumb"
                        aria-valuemin="0"
                        aria-valuenow="0"
