--- a/examples/slider/slider-2.html
+++ b/examples/slider/slider-2.html
@@ -44,7 +44,7 @@
           <div id="idTemp" class="label">Temperature</div>
           <div id="idTempValue" class="value">0</div>
           <div class="rail" style="height: 200px">
-            <div id="idTempThumb" role="slider" class="thumb" aria-valuemin="50" aria-valuenow="68"
+            <div id="idTempThumb" role="slider" tabindex="0" class="thumb" aria-valuemin="50" aria-valuenow="68"
               aria-valuemax="100" aria-labelledby="idTemp"
             ></div>
           </div>
@@ -52,7 +52,7 @@
         <div class="aria-widget-text-slider">
           <div id="idFan" class="label">Fan</div>
           <div class="rail" style="width: 160px">
-            <div id="idFanThumb" role="slider" class="thumb" aria-valuemin="0" aria-valuenow="0"
+            <div id="idFanThumb" role="slider" tabindex="0" class="thumb" aria-valuemin="0" aria-valuenow="0"
               aria-valuemax="3" aria-valuetext="Off" aria-labelledby="idFan"
               aria-orientation="horizontal"
             ></div>
@@ -65,7 +65,7 @@
         <div class="aria-widget-text-slider">
           <div id="idHeat" class="label">Heat/Cool</div>
           <div class="rail" style="width: 120px">
-            <div id="idHeatThumb" role="slider" class="thumb" aria-valuemin="0" aria-valuenow="0"
+            <div id="idHeatThumb" role="slider" tabindex="0" class="thumb" aria-valuemin="0" aria-valuenow="0"
               aria-valuemax="2" aria-valuetext="Off" aria-labelledby="idHeat"
               aria-orientation="horizontal"
             ></div>
