Editorial revisions to keyboard table

--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -161,12 +161,22 @@
           <td>When focus is on the accordion header of a collapsed section, expands the section.</td>
         </tr>
         <tr>
-          <th><kbd>Up</kbd></th>
-          <td>If focus is on an accordion header, moves focus to the previous accordion header. If focus is on the first accordion header, moves focus to the last accordion header.</td>
+          <th><kbd>Down Arrow</kbd></th>
+          <td>
+            <ul>
+              <li>When focus is on an accordion header, moves focus to the next accordion header.</li>
+              <li>When focus is on last accordion header, moves focus to first accordion header.</li>
+            </ul>
+          </td>
         </tr>
         <tr>
-          <th><kbd>Down</kbd></th>
-          <td>If focus is on an accordion header, moves focus to the next accordion header. If focus is on the last accordion header, moves focus to the first accordion header.</td>
+          <th><kbd>Up Arrow</kbd></th>
+          <td>
+            <ul>
+              <li>When focus is on an accordion header, moves focus to the previous accordion header.</li>
+              <li>When focus is on first accordion header, moves focus to last accordion header.</li>
+            </ul>
+          </td>
         </tr>
         <tr>
           <th><kbd>Home</kbd></th>
@@ -177,12 +187,23 @@
           <td>When focus is on an accordion header, moves focus to the last accordion header.</td>
         </tr>
         <tr>
-          <th><kbd>Control</kbd> + <kbd>Page Up</kbd></th>
-          <td>If focus is inside an accordion panel, moves focus to the header for that panel. If focus is on an accordion header, moves focus to the previous accordion header. If focus is on the first accordion header, moves focus to the last accordion header.</td>
+          <th><kbd>Control + Page Down</kbd></th>
+          <td>
+            <ul>
+              <li>When focus is inside an accordion panel or on an accordion header, moves focus to the next accordion header.</li>
+              <li>When focus is on last accordion header or inside last accordion panel, moves focus to first accordion header.</li>
+            </ul>
+          </td>
         </tr>
         <tr>
-          <th><kbd>Control</kbd> + <kbd>Page Down</kbd></th>
-          <td>If focus is inside an accordion panel or on an accordion header, moves focus to the next accordion header. If focus is in the last accordion header or panel, moves focus to the first accordion header.</td>
+          <th><kbd>Control + Page Up</kbd></th>
+          <td>
+            <ul>
+              <li>When focus is inside an accordion panel, moves focus to the header for that panel.</li>
+              <li>When focus is on an accordion header, moves focus to the previous accordion header.</li>
+              <li>When focus is on first accordion header, moves focus to last accordion header.</li>
+            </ul>
+          </td>
         </tr>
       </tbody>
     </table>
