In roles, states, and properties table, removed point about tabindex being dynamically added.

--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -178,12 +178,7 @@
             <td>
               <code>div</code>
             </td>
-            <td>
-              <ul>
-                <li>Includes the slider thumb in the page tab sequence.</li>
-                <li>Added by the JavaScript during instantiation.</li>
-              </ul>
-            </td>
+            <td>Includes the slider thumb in the page tab sequence.</td>
           </tr>
           <tr>
             <td></td>
