--- a/examples/slider/slider-2.html
+++ b/examples/slider/slider-2.html
@@ -175,12 +175,7 @@
             <td>
               <code>div</code>
             </td>
-            <td>
-              <ul>
-                <li>Includes the slider thumb in the page tab sequence.</li>
-                <li>Added by the JavaScript during instantiation.</li>
-              </ul>
-            </td>
+            <td>Includes the slider thumb in the page tab sequence.</td>
           </tr>
           <tr>
             <td></td>
