Modal Dialog Example: Start Review Process
The modal dialog example development for issue #103 is complete. The following changes start the review process.

Modified aria-practices.html to replace  link to issue 103 with a link to the new example page.
Modified examples/dialog-modal/dialog.html to add link to review issue 321.

--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -18,6 +18,10 @@
   <main>
   <h1>Modal Dialog Example</h1>
   <p>
+    <strong>NOTE:</strong> Please provide feedback on this example in 
+    <a href="https://github.com/w3c/aria-practices/issues/321">issue 321.</a>
+  </p>
+  <p>
     Following is an example implementation of the
     <a href="../../#dialog">design pattern for modal dialogs.</a>
       The below <q>Add Delivery Address</q> button opens a modal dialog that contains two buttons that open other dialogs.
