--- a/aria-practices.html
+++ b/aria-practices.html
@@ -515,10 +515,7 @@
       </section>
       <section class="notoc">
         <h4>Example</h4>
-        <p>
-          Work to develop a dialog example is tracked by
-          <a href="https://github.com/w3c/aria-practices/issues/103">issue 103.</a>
-        </p>
+        <p><a href="examples/dialog-modal/dialog.html">Modal Dialog Example</a></p>
       </section>
     </section>
 
