Button Example: Fix Grammar Error for Issue #316
Per comment by @annabbott in issue #316, Modified examples/button/button.html:
changed "a `A` element" to "an `A` element".

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -66,7 +66,7 @@
     <div id="example">
       <p>This <q>Print</q> action button uses a <code>div</code> element.</p>
       <div tabindex="0" role="button" id="action">Print Page</div>
-      <p>This <q>Mute</q> toggle button uses a <code>a</code> element.</p>
+      <p>This <q>Mute</q> toggle button uses an <code>a</code> element.</p>
       <a tabindex="0" role="button" id="toggle" aria-pressed="false">Mute <svg aria-hidden="true"><use xlink:href="#icon-sound"></use></svg></a>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
